# -

./: Dockerfile  Makefile  README.md  pyproject.toml
scripts/: init_repo.sh
src/: calculator.py
