[tool.poetry]
name = "linux-calculator"
version = "0.1.0"
description = "A simple calculator application with Tkinter GUI"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"  # 明确Python版本范围

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

